--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>webpack</title>
+        <title>WebPack</title>
+        <link rel="shortcut icon" href="statics/imgs/favicon.ico" type="image/x-icon" />
     </head>
-    <body></body>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
